[FIX] navBar z-index up

--- a/src/Components/Questions/questions.scss
+++ b/src/Components/Questions/questions.scss
@@ -19,7 +19,7 @@
         img {
             width: 100%;
             position: absolute;
-            z-index: 1;
+            // z-index: 1;
             left: 0;
             top: 0px;
         }
@@ -37,7 +37,7 @@
     }
 
     &-container {
-        z-index: 3;
+        // z-index: 3;
         width: 100%;
         display: flex;
         flex-direction: column;
