--- a/src/Components/navBar.scss
+++ b/src/Components/navBar.scss
@@ -1,6 +1,6 @@
 nav {
     position: relative;
-    z-index: 2;
+    z-index: 20;
     top: 0;
     width: 100%;
     background: linear-gradient(45deg, var(--acYellow), var(--acDarkBlue))
